--- a/src/app.scss
+++ b/src/app.scss
@@ -5,11 +5,21 @@ $primary: #2266ff;
 $secondary: #555577;
 $custom: #00ff00;
 
-$my-colors: (
+$custom-colors: (
     "primary": $primary,
     "secondary": $secondary,
     "custom": $custom
 );
 
-$theme-colors: map-merge($theme-colors, $my-colors);
+$custom-display-font-sizes: (
+  1: 6rem,
+  2: 3.5rem,
+  3: 3rem,
+  4: 2rem,
+  5: 1.5rem,
+  6: 1rem
+);
+
+$display-font-sizes:map-merge($display-font-sizes, $custom-display-font-sizes);
+$theme-colors: map-merge($theme-colors, $custom-colors);
 @import "../node_modules/bootstrap/scss/bootstrap";
